# compilers

./: Practica5.l  Practica5.y
01/: .directory  .qmake.stash  01.pro  1.txt  2.txt  cmdline.c  main.cpp  nfa.h
02/: cmdline.ggo  nfa.h  state.h
03/: cmdline.h  main.cpp  nfa.h  state.h
04/: .buildconfig  CMakeLists.txt  ejemplo2.l  ejemplo2.y
05/: CMakeLists.txt  CMakeLists.txt.user.5da068b  CMakeLists.txt.user.a04731d  ejemplo2.l  ejemplo2.y
